# TPMManager

./: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.in  README  README.md  ToDos1.txt  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  qdevelop-settings.db  tpm_manager.kdevelop  tpm_manager.kdevelop.pcs  tpm_manager.kdevses  tpm_manager.pro  tpmmanager.kdevelop  tpmmanager.kdevelop.pcs  tpmmanager.kdevses  tpmmanager.pro
.github/workflows/: ci.yml
doc/: Makefile.am  Makefile.in  TPM_Manager.odt
doc/doxygen/: mainpage.dox  namespaces.dox
doc/en/: Makefile.am  Makefile.in  index.cache.bz2  index.docbook
doc/latex/: Makefile  tpmmanager.acn  tpmmanager.acr  tpmmanager.alg  tpmmanager.aux  tpmmanager.bbl  tpmmanager.blg  tpmmanager.glg  tpmmanager.glo  tpmmanager.gls  tpmmanager.ilg  tpmmanager.ist  tpmmanager.lof  tpmmanager.out  tpmmanager.toc
doc/latex/bibtex/: tpmmanager.bib
doc/latex/images/: all_functions
doc/latex/src/: glossary.tex  glossarygerman.tex  tpmmanager.tex  tpmmanager.tex.backup
doc/model/: .compatibility  Design Model.emx  Use Case Model.emx
doc/model/Design Model/: 128002  128002.diagram  128130  128130.diagram  128258  128258.diagram  128386  Design Model.prj
po/: Makefile.in
src/: Main.cxx  Makefile.am  Makefile.in  NewPasswordDialog.cpp  NewPasswordDialog.cxx  NewPasswordDialog.h  NewPasswordDialog.hxx  PasswordDialog.cpp  PasswordDialog.cxx  PasswordDialog.h  PasswordDialog.hxx  PublicKeyView.cpp  PublicKeyView.cxx  PublicKeyView.h  PublicKeyView.hh  PublicKeyView.hxx  SetSRKView.cpp  SetSRKView.cxx  SetSRKView.h  SetSRKView.hxx  SetSrkView.cpp  SetSrkView.hh  TPMManager.cxx  TPMManager.hxx  main.cpp  publickeyview.cpp  publickeyview.ui  setsrkdialog.ui  tpmmanager.cpp  tpmmanager.desktop  tpmmanager.h  tpmmanager.lsm  tpmmanagerui.rc  tpmmanagerwidget.cpp  tpmmanagerwidget.h  tpmmanagerwidgetbase.cpp  tpmmanagerwidgetbase.ui
src/lib/: Makefile.am  Makefile.in  PublicKey.cpp  PublicKey.hh  TPM.cpp  TPM.hh  TSS.cpp  TSS.hh
src/microtss/: Makefile.in  PublicKey.cpp  PublicKey.cxx  PublicKey.h  PublicKey.hh  PublicKey.hxx  TPM.cpp  TPM.cxx  TPM.h  TPM.hh  TPM.hxx  TSS.cpp  TSS.cxx  TSS.h  TSS.hh  TSS.hxx
tpmmanager-0.5/: README  acinclude.m4
tpmmanager-0.5/doc/model/: .project
tpmmanager-0.5/src/: Makefile.am  Makefile.in  setsrkdialog.ui  tpmmanager.h  tpmmanagerwidget.h
tpmmanager-0.5/src/microtss/: Makefile.am  PublicKey.cpp  TPM.cpp  TSS.hh
ui/: NewPasswordDialog.ui  PasswordDialog.ui  TPMManagerBase.ui  publickeyview.ui  resources.qrc  setsrkdialog.ui  tpmmanagerbase.ui
ui/images/: .directory
